--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/charts": "^1.4.2",
+    "@firebase/app": "^0.7.31",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,9 +13,12 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "antd": "^4.22.4",
+    "axios": "^0.27.2",
+    "firebase": "^9.9.3",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-calendar": "^3.7.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
@@ -23,6 +27,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
     "typescript": "^4.7.4",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -51,6 +56,7 @@
   },
   "devDependencies": {
     "@types/react-calendar": "^3.5.2",
+    "@types/react-csv": "^1.1.3",
     "@types/redux-logger": "^3.0.9"
   }
 }
